<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Class 2a</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Black">Black</string>
    <string name="White">White</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="layout">layout</string>

</resources>
