<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tag="@string/layout"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/black"
        android:layout_alignBottom="@+id/black"
        android:layout_marginLeft="73dp"
        android:layout_toRightOf="@+id/black"
        android:text="@string/White" />

    <Button
        android:id="@+id/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="54dp"
        android:text="@string/Black" />

    <Button
        android:id="@+id/Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/black"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/Red" />

    <Button
        android:id="@+id/Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Red"
        android:layout_toRightOf="@+id/black"
        android:text="@string/Green" />

    <Button
        android:id="@+id/Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Green"
        android:layout_alignBottom="@+id/Green"
        android:layout_alignRight="@+id/White"
        android:text="@string/Blue" />

</RelativeLayout>